--- a/.env
+++ b/.env
@@ -4,8 +4,10 @@ PORT=8080  # 配置 NoneBot2 监听的端口
 COMMAND_START=["/"]  # 配置命令起始字符
 COMMAND_SEP=["."]  # 配置命令分割字符
 
-OACHAT_ON_COMMAND=xxx
-OPENAI_API_KEY=sk-xxx
+OACHAT_ON_COMMAND=xxx  # ai对话触发词
+OPENAI_API_KEY=sk-xxxxx
 PROXY_API_URL=http://example.com/v1/chat/completions
 OPENAI_MAX_TOKENS=1000
-OACHAT_HISTORY_COUNT=20  # 自定义历史消息条数
+OACHAT_QUEUE_SIZE=30  # 自定义队列条数
+CLOUDFLARE_API_KEY=xxxxx  # WorkerAI的Key
+CLOUDFLARE_ACCOUNT_ID=xxxxx  #CF的账户id
