--- a/.env
+++ b/.env
@@ -1,13 +1,5 @@
 DRIVER=~fastapi
 HOST=0.0.0.0  # 配置 NoneBot2 监听的 IP/主机名
 PORT=8080  # 配置 NoneBot2 监听的端口
-COMMAND_START=["/"]  # 配置命令起始字符
-COMMAND_SEP=["."]  # 配置命令分割字符
-
-OACHAT_ON_COMMAND=xxx  # ai对话触发词
-OPENAI_API_KEY=sk-xxxxx
-PROXY_API_URL=http://example.com/v1/chat/completions
-OPENAI_MAX_TOKENS=1000
-OACHAT_QUEUE_SIZE=30  # 自定义队列条数
-CLOUDFLARE_API_KEY=xxxxx  # WorkerAI的Key
-CLOUDFLARE_ACCOUNT_ID=xxxxx  #CF的账户id
+COMMAND_START=[""]  # 配置命令起始字符
+COMMA ND_SEP=[""]  # 配置命令分割字符
