--- a/config.jsonc
+++ b/config.jsonc
@@ -1,13 +1,20 @@
 {
-  "OPENAI": {
+  "OpenAI": {
     "API_KEY": "",  // OpenAI API 密钥
     "MODEL": "gpt-4o",  // OpenAI 模型
     "BASE_URL": "https://api.daifuku.asia/v1/chat/completions"  // OpenAI 镜像站地址
   },
-  "SPACY": {
+  "Spacy": {
       "MODEL": "en_core_web_sm"  // Spacy 模型
   },
   "MessageQueue": {
     "MAXQueue": 50  // 消息队列最大长度
+  },
+  "Cloudflare": {
+    "AccountID": "",  // Cloudflare 账户 ID
+    "API_Key": ""  // Cloudflare API 密钥
+  },
+  "Google": {
+    "API_KEY": ""  // Google API 密钥
   }
 }
