refactory: 重构OpenAI请求类

--- a/config.example.jsonc
+++ b/config.example.jsonc
@@ -1,21 +1,28 @@
 {
   "OpenAI": {
-    "API_KEY": "",  // OpenAI API 密钥
-    "MODEL": "gpt-4o",  // OpenAI 模型
-    "BASE_URL": "api.daifuku.asia/v1/chat/completions"  // OpenAI 镜像站地址 需要有/v1/chat/completions 无需https://
+    "Https": true,  // 是否使用 HTTPS
+    "BaseUrl": "",  // OpenAI 地址 无需https:// 无需有/v1/chat/completions
+    "APIKey": "",  // OpenAI API 密钥
+    "MODEL": "gpt-4o"  // OpenAI 模型
   },
   "Spacy": {
-      "MODEL": "zh_core_web_sm"  // Spacy 模型
+    "ENABLE": true,  // 是否启用 Spacy 分句模型
+    "MODEL": "zh_core_web_sm"  // Spacy 模型
   },
   "MessageQueue": {
-    "MAXQueue": 50  // 消息队列最大长度
+    "MaxQueueSize": 50  // 消息队列最大长度
   },
   "Cloudflare": {
+    "ENABLE": true,  // 是否启用 Cloudflare ViSion
     "AccountID": "",  // Cloudflare 账户 ID
-    "API_Key": ""  // Cloudflare API 密钥
+    "APIKey": ""  // Cloudflare API 密钥
   },
   "Google": {
-    "API_KEY": ""  // Google API 密钥
+    "ENABLE": true,  // 是否启用 Gemini 1.5 flash ViSion
+    "APIKey": ""  // Google API 密钥
   },
-  ""
+  "Bot": {
+    "AdminID": 123456789, // 管理员QQ号
+    "IsCrossGroup": false  // 是否开启跨群
+  }
 }
